# pyspamsum

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST  MANIFEST.in  README  README.md  README.rst  edit_dist.c  pyproject.toml  pyspamsum.c  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  config-file-deps-bump.yml  pre-commit-update.yml  publish.yml  release.yml
debug/: list_devices.py  select_simulator.py  stream_logs.py
src/: edit_dist.c  edit_dist.h  pyspamsum.c  spamsum.c
testbed/: __main__.py
testbed/iOSTestbedTests/: iOSTestbedTests.m
tests/: __init__.py  test_spamsum.py
trunk/: README  pyspamsum.c  setup.py  spamsum.c
